--- a/style/testimotionals.scss
+++ b/style/testimotionals.scss
@@ -55,3 +55,61 @@
     text-transform: uppercase;
     color: #FFFFFF;
 }
+
+@media (max-width: 1024px) {
+    .testimonials__photo {
+        height: 332px;
+    }
+    .testimonials__content {
+        width: 50%;
+        margin-left: 88px;
+        max-width: 330px;
+    }
+    .testimonials__img {
+        max-width: 502px;
+    }
+    .testimonials__title {
+        font-size: 24px;
+        line-height: 32px;
+        margin-bottom: 20px;
+    }
+    .testimonials__subtitle {
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
+
+@media (max-width: 320px) {
+    .testimonials__item {
+        width: 320px;
+    }
+    .testimonials__container {
+        padding-top: 0;
+    }
+    .testimonials__photo {
+        margin-top: 0;
+    }
+    .testimonials__img {
+        margin-top: 0;
+        width: 320px;
+        height: 212px;
+    }
+    .testimonials__content {
+        text-align: center;
+        margin-bottom: 120px;
+        width: 275px;
+        margin-left: 20px;
+        margin-right: 25px;
+    }
+    .testimonials__title {
+        font-size: 24px;
+        line-height: 32px;
+        margin-bottom: 20px;
+        width: 275px;
+    }
+    .testimonials__subtitle {
+        font-size: 12px;
+        line-height: 14px;
+        width: 275px;
+    }
+}
