--- a/style/footer.scss
+++ b/style/footer.scss
@@ -117,3 +117,85 @@
 .copyright__block span {
     color: #FFFFFF;
 }
+
+@media (max-width: 1024px) {
+    .footer__information {
+        padding: 46px 0 41px;
+    }
+    .information__item {
+        max-width: 315px;
+        margin-right: 20px;
+    }
+    .information__title {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 17px;
+    }
+    .information__title--link {
+        margin-bottom: 32px;
+    }
+    .information__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .list__cell {
+        width: 33px;
+        height: 33px;
+        margin-right: 23px;
+    }
+    .footer__copyright {
+        padding: 14px 0;
+    }
+    .copyright__block {
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
+
+@media (max-width: 320px) {
+    .information__block {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .information__item {
+        width: 279px;
+    }
+    .footer__information {
+        padding: 34px 0 28px;
+        text-align: center;
+    }
+    .information__item {
+        max-width: 315px;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 59px;
+    }
+    .information__title {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 34px;
+    }
+    .information__subtitle {
+        width: 280px;
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 33.14px;
+    }
+    .information__title--link {
+        margin-bottom: 36px;
+    }
+    .list__cell {
+        width: 33px;
+        height: 33px;
+        margin-right: 23px;
+        border: 1px solid rgba(198, 203, 205, 1);
+    }
+    .footer__copyright {
+        padding: 29.9px 0 28px;
+    }
+    .copyright__block {
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
