--- a/style/header.scss
+++ b/style/header.scss
@@ -137,3 +137,149 @@ ul {
     color: #FFFFFF;
     min-height: 78px;
 }
+
+@media (max-width: 1024px) {
+    .banner__section {
+        padding-bottom: 126px;
+    }
+    .logo {
+        max-width: 231px;
+    }
+    .banner__menu {
+        margin-bottom: 157px;
+    }
+    .menu__item {
+        min-width: 112px;
+    }
+    .menu__link {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .block__title {
+        font-size: 48px;
+        line-height: 56px;
+        margin-bottom: 62px;
+        max-width: 984px;
+    }
+    .block__subtitle {
+        font-size: 18px;
+        line-height: 21px;
+        margin-bottom: 92px;
+        max-width: 984px;
+    }
+    .block__button {
+        max-width: 313px;
+    }
+}
+
+@media (max-width: 320px) {
+    .banner__section {
+        padding-bottom: 52px;
+        width: 320px;
+    }
+    .logo {
+        max-width: 130px;
+    }
+    .menu__list {
+        display: none;
+    }
+    .burger {
+        padding-right: 4%;
+        display: block;
+    }
+    .burger {
+        width: 320px;
+        position: relative;
+        color: white;
+        text-align: center;
+        height: 28px;
+        font-family: "raleway";
+        display: none;
+    }
+    #check-menu {
+        display: none;
+    }
+    label {
+        display: block;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        z-index: 2;
+        line-height: 40px;
+    }
+    .burger-line {
+        position: absolute;
+        top: 8px;
+        right: 10px;
+        width: 35px;
+        height: 2px;
+        background-color: #fff;
+        transition: .5s all;
+    }
+    .second,
+    .third {
+        top: 18px;
+    }
+    .fourth {
+        top: 28px;
+    }
+    .main-menu {
+        display: block;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        transform: translateY(100%);
+        max-height: 0;
+        font-size: 0;
+        overflow: hidden;
+        transition: .5s all;
+        backdrop-filter: blur(30px);
+    }
+    .link {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        border-top: 1px solid rgba(255, 255, 255, .3);
+    }
+    .link:hover {
+        background-color: #FF4343;
+    }
+    #check-menu:checked~.main-menu {
+        max-height: 500px;
+        font-size: 16px;
+    }
+    #check-menu:checked~.first {
+        display: none;
+    }
+    #check-menu:checked~.second {
+        transform: rotate(45deg);
+    }
+    #check-menu:checked~.third {
+        transform: rotate(-45deg);
+    }
+    #check-menu:checked~.fourth {
+        display: none;
+    }
+    .banner__block {
+        width: 280px;
+    }
+    .block__title {
+        font-size: 36px;
+        line-height: 42.26px;
+        margin-bottom: 32.71px;
+        max-width: 280px;
+    }
+    .block__subtitle {
+        font-size: 14px;
+        line-height: 16.44px;
+        margin-bottom: 51px;
+        max-width: 280px;
+    }
+    .block__button {
+        max-width: 279.24px;
+        max-height: 58.18px;
+    }
+}
