--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,200;1,300;1,400;1,900&display=swap');
+body {
+    margin: 0 auto;
+    max-width: 1510px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -13,48 +18,40 @@
 @import 'testimotionals';
 @import 'download';
 @import 'footer';
-@media(max-width: 1024px) {
-    /*-----------------------------------------*/
-    /*header*/
+@media (max-width: 320px) {
+    .menu__list {
+        display: none;
+    }
     .banner__section {
-        padding-bottom: 126px;
+        padding-bottom: 52px;
     }
     .logo {
-        max-width: 231px;
+        max-width: 130px;
     }
     .banner__menu {
-        margin-bottom: 157px;
-    }
-    .menu__item {
-        min-width: 112px;
-    }
-    .menu__link {
-        font-size: 12px;
-        line-height: 14px;
+        margin-bottom: 50px;
     }
     .block__title {
-        font-size: 48px;
-        line-height: 56px;
-        margin-bottom: 62px;
-        max-width: 984px;
+        font-size: 36px;
+        line-height: 42px;
+        margin-bottom: 33px;
+        max-width: 280px;
     }
     .block__subtitle {
-        font-size: 18px;
-        line-height: 21px;
-        margin-bottom: 92px;
-        max-width: 984px;
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 51px;
+        max-width: 280px;
     }
     .block__button {
-        max-width: 313px;
+        max-width: 280px;
     }
-    /*-----------------------------------------*/
-    /*features*/
     .features__section {
         padding: 87px 0 80px;
     }
     .features__block {
-        grid-template-rows: repeat(2, 237px);
-        grid-template-columns: repeat(3, 315px);
+        grid-template-rows: repeat(6, 221.54px);
+        grid-template-columns: repeat(1, 279px);
         row-gap: 60px;
         column-gap: 20px;
     }
@@ -72,13 +69,11 @@
         font-size: 14px;
         line-height: 16px;
     }
-    /*-----------------------------------------*/
-    /*work*/
     .work__container {
         width: 100%;
         display: grid;
-        grid-template-rows: repeat(2, 230px);
-        grid-template-columns: repeat(4, 256px);
+        grid-template-rows: repeat(4, 144px);
+        grid-template-columns: 1fr 1fr;
     }
     .work__title {
         font-size: 18px;
@@ -100,8 +95,8 @@
     }
     .team__block {
         display: grid;
-        grid-template-columns: repeat(4, 227px);
-        column-gap: 25px;
+        grid-template-columns: repeat(1, 280px);
+        grid-template-rows: repeat(4, 521px);
     }
     .team__img {
         margin-bottom: 25px;
@@ -125,82 +120,5 @@
     .list__item {
         width: 33px;
         height: 33px;
-    }
-    /*-----------------------------------------*/
-    /*testimonials*/
-    .testimonials__photo {
-        height: 332px;
-    }
-    .testimonials__content {
-        width: 50%;
-        margin-left: 88px;
-        max-width: 330px;
-    }
-    .testimonials__img {
-        max-width: 502px;
-    }
-    .testimonials__title {
-        font-size: 24px;
-        line-height: 32px;
-        margin-bottom: 20px;
-    }
-    .testimonials__subtitle {
-        font-size: 12px;
-        line-height: 14px;
-    }
-    /*-----------------------------------------*/
-    /*download*/
-    .download__section {
-        padding: 93px 0 78px;
-    }
-    .download__title {
-        font-size: 24px;
-        line-height: 28px;
-        margin-bottom: 21px;
-    }
-    .download__subtitle {
-        font-size: 14px;
-        line-height: 16px;
-        margin-bottom: 46px;
-    }
-    .download__button {
-        max-width: 313px;
-    }
-    .button__link {
-        font-size: 18px;
-        line-height: 21px;
-    }
-    /*-----------------------------------------*/
-    /*footer*/
-    .footer__information {
-        padding: 46px 0 41px;
-    }
-    .information__item {
-        max-width: 315px;
-        margin-right: 20px;
-    }
-    .information__title {
-        font-size: 14px;
-        line-height: 16px;
-        margin-bottom: 17px;
-    }
-    .information__title--link {
-        margin-bottom: 32px;
-    }
-    .information__subtitle {
-        font-size: 14px;
-        line-height: 16px;
-    }
-    .list__cell {
-        width: 33px;
-        height: 33px;
-        margin-right: 23px;
-    }
-    .footer__copyright {
-        padding: 14px 0;
-    }
-    .copyright__block {
-        font-size: 14px;
-        line-height: 16px;
     }
 }
