--- a/style/team.scss
+++ b/style/team.scss
@@ -103,3 +103,80 @@
     transform: scale(1.1);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 1024px) {
+    .team__section {
+        max-width: 1024px;
+        padding: 78px 0;
+    }
+    .team__block {
+        width: 984px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .team__img {
+        margin-bottom: 25px;
+        object-fit: cover;
+        width: 227px;
+        height: 227px;
+    }
+    .team__title {
+        font-size: 18px;
+        line-height: 21px;
+    }
+    .team__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 22px;
+    }
+    .team__text {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 39px;
+    }
+    .list__item {
+        width: 33px;
+        height: 33px;
+    }
+}
+
+@media (max-width: 320px) {
+    .team__section {
+        max-width: 280px;
+        padding: 35px 0;
+        display: flex;
+        justify-content: center;
+    }
+    .team__block {
+        width: 280px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .team__img>img {
+        object-fit: cover;
+        margin-bottom: 25px;
+        width: 280px;
+        height: 227px;
+    }
+    .team__title {
+        font-size: 18px;
+        line-height: 21px;
+    }
+    .team__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 38px;
+    }
+    .team__text {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 39px;
+    }
+    .list__item {
+        width: 39px;
+        height: 39px;
+        border: 1px solid rgba(198, 203, 205, 1);
+    }
+}
