--- a/style/work.scss
+++ b/style/work.scss
@@ -1,8 +1,15 @@
+.work__section {
+    width: 1510px;
+    display: flex;
+    justify-content: center;
+}
+
 .work__container {
+    width: 1510px;
     display: grid;
     justify-content: center;
     grid-template-rows: repeat(2, 340px);
-    grid-template-columns: repeat(4, 379px);
+    grid-template-columns: repeat(4, 378px);
 }
 
 .work__item {
@@ -17,9 +24,8 @@
 }
 
 .work__img {
-    width: 379px;
+    width: 100%;
     height: 340px;
-    object-fit: cover;
     position: absolute;
     left: 0;
     top: 0;
@@ -28,6 +34,7 @@
 .work__img img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .work__content {
@@ -77,4 +84,111 @@
     align-items: center;
     text-align: center;
     color: #FFFFFF;
+}
+
+@media (max-width: 1024px) {
+    .work__section {
+        width: 1024px;
+        display: flex;
+        justify-content: center;
+    }
+    .work__container {
+        width: 100%;
+        display: grid;
+        grid-template-rows: repeat(2, 230px);
+        grid-template-columns: repeat(4, 256px);
+    }
+    .work__title {
+        font-size: 18px;
+        line-height: 21px;
+        margin-bottom: 32px;
+    }
+    .work__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .work__img {
+        width: 256px;
+        height: 230px;
+    }
+}
+
+@media (max-width: 320px) {
+    .work__section {
+        width: 320px;
+        display: flex;
+        justify-content: center;
+    }
+    .work__container {
+        width: 320px;
+        display: grid;
+        justify-content: center;
+        grid-template-rows: repeat(4, 144px);
+        grid-template-columns: repeat(2, 160px);
+    }
+    .work__item {
+        position: relative;
+        cursor: pointer;
+    }
+    .work__item::after {
+        content: '';
+        display: block;
+        padding-top: 100%;
+    }
+    .work__img {
+        width: 160px;
+        height: 144px;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    .work__img img {
+        width: 160px;
+        height: 144px;
+        object-fit: cover;
+    }
+    .work__content {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        background-color: rgba(255, 67, 67, 0.8);
+        opacity: 0;
+        transition: all .3s linear;
+    }
+    .work__content:hover {
+        opacity: 1;
+    }
+    .work__content:active {
+        opacity: 1;
+        background-color: rgba(185, 12, 12, 0.8);
+    }
+    .work__title {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 900;
+        font-size: 24px;
+        line-height: 28px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-bottom: 36px;
+    }
+    .work__subtitle {
+        font-family: 'Raleway', sans-serif;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 21px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #FFFFFF;
+    }
 }
